--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -78,22 +78,12 @@
             </div>
             <div class="tab-pane fade" role="tabpanel" id="dataManage">
                 <div>
-                    <a class="addBtn pull-right" data-toggle="modal" data-target="#taskAdd" onclick="" ><i  class="iconfont icon-tianjia mr10"></i>新建任务</a>
-                    <form class="layui-form form-inline">
-                        <div class="form-group mgl15">
-                            <label>搜索：</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="模糊查询请用%代替" name="username" />
-                            <input type="text" class="form-control" placeholder="根据序列号查询" name="nickname" />
-                        </div>
-                        <button class="btn-color-blue" type="button" lay-submit lay-filter="queryHUser">
-                            <i class="iconfont icon-chazhao"></i>
-                        </button>
-                    </form>
+                    <a class="addBtn pull-right" data-toggle="modal" onclick="hdfsNow()" ><i  class="iconfont icon-chuli mr10"></i>立即同步</a>
                 </div>
-                <!-- 任务管理 数据展示 -->
-                <table id="tableTaskList" lay-filter="task"></table>
+                <!-- 同步状态图表 -->
+                <table id="chartDataState" lay-filter="task"></table>
+                <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
+                <div id="hdfsChart" style="width: 1000px;height:800px;"></div>
             </div>
         </div>
     </div>
@@ -424,5 +414,7 @@
 
     <script src="/static/js/graduation/dashboard.js"></script>
     <script src="/static/js/common.js"></script>
+    <script src="/static/js/echart/echarts.min.js"></script>
+    <script>hdfsNow();</script>
 </body>
 </html>
