--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -81,12 +81,10 @@
                     <a class="addBtn pull-right" data-toggle="modal" onclick="hdfsNow()" ><i  class="iconfont icon-chuli mr10"></i>立即同步</a>
                     <a class="addBtn pull-right" data-toggle="modal" onclick="openImportHUsersFrame()">批量用户信息档案导入</a>
                 </div>
-                <!-- 同步状态图表 -->
-                <table id="chartDataState" lay-filter="task"></table>
-                <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
-                <div id="hdfsChart" style="width: 1000px;height:800px;"></div>
                 <!-- 上传到数据库的进度 -->
-                <div id="mysqlChart" style="width: 1000px;height:800px;"></div>
+                <div id="mysqlChart" style="width: 820px;height:690px" class="inlineBlock"></div>
+                <!-- 为 ECharts 准备一个具备大小（宽高）的 DOM -->
+                <div id="hdfsChart" style="width: 820px;height:690px;" class="inlineBlock"></div>
             </div>
         </div>
     </div>
@@ -418,6 +416,6 @@
     <script src="/static/js/graduation/dashboard.js"></script>
     <script src="/static/js/common.js"></script>
     <script src="/static/js/echart/echarts.min.js"></script>
-    <script>hdfsNow();</script>
+    <script>hdfsNow();mysqlNow();</script>
 </body>
 </html>
