update static source with title.

--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -18,7 +18,7 @@
     <div>
         <div class="header" >
             <div class="leftLine"></div>
-            <div><h1>基于hadoop的人员信息系统</h1></div>
+            <div class="title"><!--<i class="emblem">--></i><span>基于hadoop的人员信息系统</span></div>
             <div class="rightLine">
                 <a class="logout" onclick="logOut()"><div id="currUsername"></div><i class="iconfont icon-ic_power_settings_new_px"></i><span>注销</span></a>
             </div>
@@ -416,6 +416,6 @@
     <script src="/static/js/graduation/dashboard.js"></script>
     <script src="/static/js/common.js"></script>
     <script src="/static/js/echart/echarts.min.js"></script>
-    <script>hdfsNow();mysqlNow();</script>
+    <script>hdfsNow();</script>
 </body>
 </html>
