--- a/gra_business/src/main/resources/templates/systemManage.html
+++ b/gra_business/src/main/resources/templates/systemManage.html
@@ -30,7 +30,7 @@
     <div>
         <div class="header" >
             <div class="leftLine"></div>
-            <div><h1>GrantCommon</h1></div>
+            <div class="title"><!--<i class="emblem">--></i><span>GrantCommon</span></div>
             <div class="leftLine rightLine">
                 <div id="currUsername"></div>
                 <a class="logout" onclick="logOut()"><i class="iconfont icon-ic_power_settings_new_px"></i><span>注销</span></a>
