add resetDBandHDFS. there is a problem that clearHDFS failure.

--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -78,8 +78,8 @@
             </div>
             <div class="tab-pane fade" role="tabpanel" id="dataManage">
                 <div>
-                    <a class="addBtn pull-right" data-toggle="modal" onclick="hdfsNow()" ><i  class="iconfont icon-chuli mr10"></i>立即同步</a>
-                    <a class="addBtn pull-right" data-toggle="modal" onclick="openImportHUsersFrame()">批量用户信息档案导入</a>
+                    <a class="addBtn pull-right" data-toggle="modal" onclick="resetDBandHDFS()" ><i  class="iconfont icon-fanhui mr10"></i>重置库与HDFS</a>
+                    <a class="addBtn pull-right" data-toggle="modal" onclick="openImportHUsersFrame()"><i  class="iconfont icon-next mr10"></i>批量用户信息档案导入</a>
                 </div>
                 <!-- 上传到数据库的进度 -->
                 <div id="mysqlChart" style="width: 820px;height:690px" class="inlineBlock"></div>
