--- a/gra_business/src/main/resources/templates/systemManage.html
+++ b/gra_business/src/main/resources/templates/systemManage.html
@@ -32,8 +32,7 @@
             <div class="leftLine"></div>
             <div class="title"><!--<i class="emblem">--></i><span>GrantCommon</span></div>
             <div class="leftLine rightLine">
-                <div id="currUsername"></div>
-                <a class="logout" onclick="logOut()"><i class="iconfont icon-ic_power_settings_new_px"></i><span>注销</span></a>
+                <a class="logout" onclick="logOut()"><div id="currUsername"></div><i class="iconfont icon-ic_power_settings_new_px"></i><span>注销</span></a>
                 <!--<a class="system logout " ><i class="iconfont icon-ic_power_settings_new_px"></i><span>系统管理</span></a>-->
             </div>
 
