update HadoopUtil. Better connection. support reset DB and reset DFS.

--- a/gra_business/src/main/resources/templates/upload/importUsers.html
+++ b/gra_business/src/main/resources/templates/upload/importUsers.html
@@ -12,6 +12,7 @@
         <button type="button" class="layui-btn" onclick="downLoadTemplate()">
             <i class="layui-icon">&#xe67c;</i>下载模板
         </button>
+        上传为异步操作，可以手动关闭上传页面不影响操作。
     </div>
 </form>
 </body>
