--- a/gra_business/src/main/resources/templates/userlogin.html
+++ b/gra_business/src/main/resources/templates/userlogin.html
@@ -34,8 +34,11 @@
 <body class="login_body">
 <div class="login_form">
     <form class="layui-form" action="javascript:">
+		<div>基于HADOOP的人员信息系统</div>
         <input type="text" name="username" lay-verify="required" placeholder="用户名">
+		</br>
         <input type="password" name="password" lay-verify="required"  placeholder="密码">
+		</br>
         <button class="layui-btn" lay-submit lay-filter="formDemo">登录</button>
     </form>
 </div>
