index bubble UI.

--- a/gra_business/src/main/resources/templates/systemManage.html
+++ b/gra_business/src/main/resources/templates/systemManage.html
@@ -30,7 +30,7 @@
     <div>
         <div class="header" >
             <div class="leftLine"></div>
-            <div class="title"><!--<i class="emblem">--></i><span>GrantCommon</span></div>
+            <div class="title"><!--<i class="emblem">--></i><span>基于HADOOP的人员信息系统</span></div>
             <div class="leftLine rightLine">
                 <a class="logout" onclick="logOut()"><div id="currUsername"></div><i class="iconfont icon-ic_power_settings_new_px"></i><span>注销</span></a>
                 <!--<a class="system logout " ><i class="iconfont icon-ic_power_settings_new_px"></i><span>系统管理</span></a>-->
