--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -18,7 +18,7 @@
     <div>
         <div class="header" >
             <div class="leftLine"></div>
-            <div class="title"><!--<i class="emblem">--></i><span>基于hadoop的人员信息系统</span></div>
+            <div class="title"><!--<i class="emblem">--></i><span>基于HADOOP的人员信息系统</span></div>
             <div class="rightLine">
                 <a class="logout" onclick="logOut()"><div id="currUsername"></div><i class="iconfont icon-ic_power_settings_new_px"></i><span>注销</span></a>
             </div>
