change downloadImportXXXFile API.

--- a/gra_business/src/main/resources/templates/upload/importFiles.html
+++ b/gra_business/src/main/resources/templates/upload/importFiles.html
@@ -22,7 +22,7 @@
      */
     function downLoadTemplate(){
         let $ = layui.jquery;
-        $.ajax({
+        /*$.ajax({
             url: '/huser/importFilesTemplate',
             method: 'GET',
             contentType: 'application/json',
@@ -30,7 +30,8 @@
                 let url = res.data;
                 window.open(url);
             }
-        });
+        });*/
+        window.open("/download/huserFileTemplate");
     }
 
     layui.use(['upload', 'form'], function(){
