confirm password check repeat. there is difference between systemManage.html and dashboard.html. based on layUI.

--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -271,13 +271,13 @@
                             <div class="layui-form-item">
                                 <label class="layui-form-label">密码</label>
                                 <div class="layui-input-block">
-                                    <input type="password" name="password" lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    <input type="password" name="password" id="passwd" lay-verify="password" placeholder="" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                             <div class="layui-form-item">
                                 <label class="layui-form-label">密码</label>
                                 <div class="layui-input-block">
-                                    <input type="password" name="password" lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    <input type="password" name="password" lay-verify="repassword" placeholder="" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                         </div>
