--- a/gra_business/src/main/resources/templates/systemManage.html
+++ b/gra_business/src/main/resources/templates/systemManage.html
@@ -127,13 +127,13 @@
                             <div class="layui-form-item">
                                 <label class="layui-form-label">密码</label>
                                 <div class="layui-input-block">
-                                    <input type="password" id="password" name="password" required lay-verify="pass" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                                    <input type="password" id="password" name="password" lay-verify="pass" placeholder="请输入密码" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                             <div class="layui-form-item">
                                 <label class="layui-form-label">密码</label>
                                 <div class="layui-input-block">
-                                    <input type="password" data-check="password" name="check_password" required lay-verify="required|checkRepeat" placeholder="确认密码" autocomplete="off" class="layui-input">
+                                    <input type="password" data-check="password" name="repassword" lay-verify="required|checkRepeat" placeholder="确认密码" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                         </div>
@@ -277,13 +277,13 @@
                             <div class="layui-form-item">
                                 <label class="layui-form-label">密码</label>
                                 <div class="layui-input-block">
-                                    <input type="password" name="password" lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    <input type="password" id="edit_password" name="password" lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                             <div class="layui-form-item">
                                 <label class="layui-form-label">密码</label>
                                 <div class="layui-input-block">
-                                    <input type="password" name="password" lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    <input type="password" data-check="edit_password" name="password" lay-verify="required|checkRepeat" placeholder="" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                         </div>
