--- a/gra_business/src/main/resources/static/css/common.css
+++ b/gra_business/src/main/resources/static/css/common.css
@@ -1,6 +1,6 @@
 body{
     background-color: #042D4A;
-    color:#ccc;
+    /*color:#ccc;*/
     font-size: 14px;
     font-family:"Microsoft YaHei",微软雅黑,"MicrosoftJhengHei",华文细黑,STHeiti,MingLiu;
 }
