--- a/gra_business/src/main/resources/templates/graduation/dashboard.html
+++ b/gra_business/src/main/resources/templates/graduation/dashboard.html
@@ -197,7 +197,7 @@
                     </div>
                     <div class="row">
                         <div class="layui-form-item">
-                            <label class="layui-form-label">身份证号</label>
+                            <label class="layui-form-label">身份证</label>
                             <div class="layui-input-block">
                                 <input type="text" name="idCard" lay-verify="required" autocomplete="off" class="layui-input">
                             </div>
@@ -222,13 +222,13 @@
                     </div>
                     <div class="row">
                         <div class="layui-form-item">
-                            <label class="layui-form-label">联系电话</label>
+                            <label class="layui-form-label">电话</label>
                             <div class="layui-input-block">
                                 <input type="text" name="telephone" lay-verify="required" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
-                            <label class="layui-form-label">邮箱地址</label>
+                            <label class="layui-form-label">邮箱</label>
                             <div class="layui-input-block">
                                 <input type="text" name="email" autocomplete="off" class="layui-input">
                             </div>
@@ -342,7 +342,7 @@
                     </div>
                     <div class="row">
                         <div class="layui-form-item">
-                            <label class="layui-form-label">身份证号</label>
+                            <label class="layui-form-label">身份证</label>
                             <div class="layui-input-block">
                                 <input type="text" name="idCard" disabled="true" autocomplete="off" class="layui-input">
                             </div>
@@ -364,13 +364,13 @@
                     </div>
                     <div class="row">
                         <div class="layui-form-item">
-                            <label class="layui-form-label">联系电话</label>
+                            <label class="layui-form-label">电话</label>
                             <div class="layui-input-block">
                                 <input type="text" name="telephone" disabled="true" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
-                            <label class="layui-form-label">邮箱地址</label>
+                            <label class="layui-form-label">邮箱</label>
                             <div class="layui-input-block">
                                 <input type="text" name="email" disabled="true" autocomplete="off" class="layui-input">
                             </div>
@@ -378,7 +378,7 @@
                     </div>
                     <div class="row">
                         <div class="layui-form-item">
-                            <label class="layui-form-label">联系地址</label>
+                            <label class="layui-form-label">地址</label>
                             <div class="layui-input-block">
                                 <input type="text" name="address" disabled="true" autocomplete="off" class="layui-input">
                             </div>
@@ -386,7 +386,7 @@
                     </div>
                     <div class="row">
                         <div class="layui-form-item">
-                            <label class="layui-form-label">档案编号</label>
+                            <label class="layui-form-label">档案号</label>
                             <div class="layui-input-block">
                                 <input type="text" name="huserId" disabled="true" autocomplete="off" class="layui-input">
                             </div>
